# topic_researcher

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
db/: chroma.sqlite3
output/: email_summary.md  report.md
src/: main.py
src/coin_researcher/: __init__.py  crew.py  main.py
src/coin_researcher/config/: agents.yaml  tasks.yaml  tools.yaml
src/news_researcher/: __init__.py  crew.py  main.py
src/news_researcher/config/: agents.yaml  tasks.yaml  tools.yaml
src/topic_researcher/: crew.py  main.py
src/topic_researcher/config/: agents.yaml  tasks.yaml
