[project]
name = "topic_researcher"
version = "0.1.0"
description = "topic_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "gradio>=5.33.1",
]

[project.scripts]
topic_researcher = "topic_researcher.main:run"
run_crew = "topic_researcher.main:run"
train = "topic_researcher.main:train"
replay = "topic_researcher.main:replay"
test = "topic_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
